# TetriumColor

./: .gitignore  CMakeLists.txt  requirements.txt
TetriumColor/: ChromaticityAnalysis.py  ColorSampler.py  ColorSpace.py  SolidColorGenerator.py  TetraColorPicker.py  TetraMetamer.py  TetraPlate.py  __init__.py
TetriumColor/ColorMath/: ConeToDisplay.py  Conversion.py  SubSpaceIntersection.py
TetriumColor/Measurement/: Nix.py  SpecimIQ.py  TetriumMeasurementRoutines.py
TetriumColor/Observer/: ColorSpaceTransform.py  InkUtils.py  Inks.py  MaxBasis.py  Observer.py  ObserverGenotypes.py  Spectra.py  __init__.py
TetriumColor/PsychoPhys/: IshiharaPlate.py
TetriumColor/Utils/: CustomTypes.py  ImageUtils.py  ParserOptions.py
TetriumColor/Visualization/: Geometry.py
cpp/: PCH.h
cpp/include/TetriumColor/: ColorGenerator.h  ColorGeneratorFactory.h  ColorSpaceType.h  ColorTestResult.h  GeneticColorPicker.h  GeneticColorPickerPlateGenerator.h  PseudoIsochromaticPlateGenerator.h  QuestColorPicker.h  QuestColorPickerPlateGenerator.h  SolidColorGenerator.h  TestGenerator.h  TetriumColor.h  TrialData.h
cpp/src/: CircleGridGenerator.cpp  ColorGenerator.cpp  ColorGeneratorFactory.cpp  GeneticColorPicker.cpp  GeneticColorPickerPlateGenerator.cpp  PseudoIsochromaticPlateGenerator.cpp  QuestColorPicker.cpp  QuestColorPickerPlateGenerator.cpp  SolidColorGenerator.cpp  TestGenerator.cpp  TetriumColor.cpp
measurements/2025-10-12/primaries/: r0g0b0o255.csv  r0g0b255o0.csv  r0g255b0o0.csv  r255g0b0o0.csv
scripts/: simulate_observer_views.py  test_observer_simulation.sh
scripts/data-analysis/: aggregate_analysis.py  temporal_afc_analysis.py
scripts/deprecated/psychophysics/: debug.ipynb
scripts/inkset/: analyze_inkset.py  batch_analysis.py  config.py  ink_calibrate.py  ink_processing.py  ink_summary.py  inkset-analyze-colorspace.py  inkset-summary.py  library_registry.py  pantone-inkset.ipynb  validate-inkset.ipynb
scripts/opsins/: opsin_cone_spectra.csv
scripts/printing/: ink-testing.ipynb
scripts/psychophysics/: ishihara_grid.py
scripts/tetrium-routines/: RGBOCVtoRGOBGO.py  generateCubeMap.py  generateCubeMapForMeasurement.py  generateTetriumMat.py  generate_rgb_ocv_calibration.py
(+16 files in other folders)
